@@ -3,13 +3,11 @@ package ai.snippetquiz.core_service.contentbank.adapter.out.repository;
 import ai.snippetquiz.core_service.contentbank.adapter.out.entities.ContentEntryTopicEntity;
 import ai.snippetquiz.core_service.contentbank.adapter.out.mapper.ContentEntryTopicMapper;
 import ai.snippetquiz.core_service.contentbank.domain.model.ContentEntryTopic;
-import ai.snippetquiz.core_service.contentbank.domain.port.out.ContentEntryTopicRepository;
+import ai.snippetquiz.core_service.contentbank.domain.port.ContentEntryTopicRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -28,7 +26,7 @@ public class JpaContentEntryTopicRepositoryAdapter implements ContentEntryTopicR
         return jpaContentEntryTopicRepository.findByContentEntryId(contentEntryId)
                 .stream()
                 .map(contentEntryTopicMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -36,7 +34,7 @@ public class JpaContentEntryTopicRepositoryAdapter implements ContentEntryTopicR
         return jpaContentEntryTopicRepository.findByTopicId(topicId)
                 .stream()
                 .map(contentEntryTopicMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
